# quotes-api

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20260413174851_create_quotes.sql
src/: auth.rs  config.rs  db.rs  errors.rs  main.rs  models.rs  routes.rs
