[package]
name = "quotes-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono" ]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
constant_time_eq = "0.3"
uuid = { version = "1", features = ["v4"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
thiserror = "2"

[dev-dependencies]
axum-test = "17"
tokio = { version = "1", features = ["full"] }
serde_json = "1"